# useful_shell_instructions

./: .gitignore_example  .tmux.conf  .vimrc  CMakeLists.txt  DS_readlist.md  Linux_kernel.sh  Makefile.simple  NAM.txt  README.md  bench.sh  c_utils.c  cal.sh  cmake.md  code.tex  complex.sh  cuda.sh  data.tmp  debug.sh  differ_bet_2pl.md  docker.sh  error_code.h  example.gnuplot  fio.job  g++-5.sh  gcc.sh  gdb.txt  git.sh  instr1.sh  instr3.sh  instr4.sh  instr_shell_array.sh  instr_sort  intr2.sh  jemalloc.sh  linux.sh  linux_kernel.md  linux_kernel.sh  network_in.sh  nlp.md  numa.txt  (+30 more)
latex/: command.tex  shrunk.tex  tips.tex  tool.sh
paper_reading/: Disaggregation.txt  GC.txt  GSoC.txt  allocator.txt  b-tree.md  basic.txt  cc.txt  conference1.txt  cpp.txt  graph  graph_db.txt  how_to_config_rdma.txt  mcdram.txt  nam.txt  nvm.txt  nvm_blog.txt  nvm_db  rdma.txt  skiplist.txt  to_do.txt  tool.txt  trace.txt  tunning
